.gitea/kubernetes/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scoresaber-reloaded-frontend-service
  namespace: public-services
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: scoresaber-reloaded-frontend
