.gitea/kubernetes/frontend/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scoresaber-reloaded-frontend-ingress
  namespace: public-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ssr.fascinated.cc`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: compress
          namespace: traefik
      services:
        - name: scoresaber-reloaded-frontend-service
          port: 3000
  tls:
    secretName: fascinated-cc
